; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_htt_rx.c_ath10k_htt_rx_crypto_mic_len.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_htt_rx.c_ath10k_htt_rx_crypto_mic_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath10k = type { i32 }

@IEEE80211_CCMP_MIC_LEN = common dso_local global i32 0, align 4
@IEEE80211_CCMP_256_MIC_LEN = common dso_local global i32 0, align 4
@IEEE80211_GCMP_MIC_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"unsupported encryption type %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath10k*, i32)* @ath10k_htt_rx_crypto_mic_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath10k_htt_rx_crypto_mic_len(%struct.ath10k* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ath10k*, align 8
  %5 = alloca i32, align 4
  store %struct.ath10k* %0, %struct.ath10k** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 134, label %7
    i32 128, label %7
    i32 130, label %7
    i32 133, label %7
    i32 132, label %7
    i32 137, label %8
    i32 138, label %10
    i32 135, label %12
    i32 136, label %12
    i32 129, label %14
    i32 131, label %14
  ]

7:                                                ; preds = %2, %2, %2, %2, %2
  store i32 0, i32* %3, align 4
  br label %19

8:                                                ; preds = %2
  %9 = load i32, i32* @IEEE80211_CCMP_MIC_LEN, align 4
  store i32 %9, i32* %3, align 4
  br label %19

10:                                               ; preds = %2
  %11 = load i32, i32* @IEEE80211_CCMP_256_MIC_LEN, align 4
  store i32 %11, i32* %3, align 4
  br label %19

12:                                               ; preds = %2, %2
  %13 = load i32, i32* @IEEE80211_GCMP_MIC_LEN, align 4
  store i32 %13, i32* %3, align 4
  br label %19

14:                                               ; preds = %2, %2
  br label %15

15:                                               ; preds = %2, %14
  %16 = load %struct.ath10k*, %struct.ath10k** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @ath10k_warn(%struct.ath10k* %16, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %17)
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %15, %12, %10, %8, %7
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i32 @ath10k_warn(%struct.ath10k*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
